początkowa integracja z weaviate + lekki zmiany frontu